# NekoMusicForPc

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.sh  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-macos.yml
cmake/: mingw-x64-toolchain.cmake
electron/: lyrics.html  main.js  preload.cjs  preload.js
packaging/: nekomusic.desktop  nekomusic_installer.nsi
packaging/debian/: postinst  postrm
qt-win/6.10.2/mingw_64/: config_qtbase.opt  config_qtbase.summary  config_qtdeclarative.summary  config_qtmultimedia.summary  config_qtsvg.opt  config_qtsvg.summary  config_qttools.summary
qt-win/6.10.2/mingw_64/doc/global/: disabledwarnings.qdocconf
qt-win/6.10.2/mingw_64/lib/: Qt6Concurrent.prl  Qt6Core.prl  Qt6DBus.prl  Qt6Designer.prl  Qt6DesignerComponents.prl  Qt6DeviceDiscoverySupport.prl  Qt6EntryPoint.prl  Qt6ExampleIcons.prl  Qt6ExamplesAssetDownloader.prl  Qt6FFmpegMediaPluginImpl.prl  Qt6FbSupport.prl  Qt6Gui.prl  Qt6Help.prl  Qt6LabsAnimation.prl  Qt6LabsFolderListModel.prl  Qt6LabsPlatform.prl  Qt6LabsQmlModels.prl  Qt6LabsSettings.prl  Qt6LabsSharedImage.prl  Qt6LabsSynchronizer.prl  Qt6LabsWavefrontMesh.prl  Qt6Multimedia.prl  Qt6MultimediaQuick.prl  Qt6MultimediaTestLib.prl  Qt6MultimediaWidgets.prl  Qt6Network.prl  Qt6OpenGL.prl  Qt6OpenGLWidgets.prl  Qt6PacketProtocol.prl  Qt6PrintSupport.prl  Qt6Qml.prl  Qt6QmlAssetDownloader.prl  Qt6QmlCompiler.prl  Qt6QmlCore.prl  Qt6QmlDebug.prl  Qt6QmlDom.prl  Qt6QmlFormat.prl  Qt6QmlLS.prl  Qt6QmlLocalStorage.prl  Qt6QmlMeta.prl  (+46 more)
qt-win/6.10.2/mingw_64/lib/pkgconfig/: Qt6Concurrent.pc  Qt6Core.pc  Qt6DBus.pc  Qt6Designer.pc  Qt6Gui.pc  Qt6Help.pc  Qt6LabsAnimation.pc  Qt6LabsFolderListModel.pc  Qt6LabsPlatform.pc  Qt6LabsQmlModels.pc  Qt6LabsSettings.pc  Qt6LabsSharedImage.pc  Qt6LabsSynchronizer.pc  Qt6LabsWavefrontMesh.pc  Qt6Linguist.pc  Qt6Multimedia.pc  Qt6MultimediaWidgets.pc  Qt6Network.pc  Qt6OpenGL.pc  Qt6OpenGLWidgets.pc  Qt6Platform.pc  Qt6PrintSupport.pc  Qt6Qml.pc  Qt6QmlAssetDownloader.pc  Qt6QmlCompiler.pc  Qt6QmlCore.pc  Qt6QmlIntegration.pc  Qt6QmlLocalStorage.pc  Qt6QmlMeta.pc  Qt6QmlModels.pc  Qt6QmlNetwork.pc  Qt6QmlWorkerScript.pc  Qt6QmlXmlListModel.pc  Qt6Quick.pc  Qt6QuickControls2.pc  Qt6QuickControls2Basic.pc  Qt6QuickControls2BasicStyleImpl.pc  Qt6QuickControls2FluentWinUI3StyleImpl.pc  (+29 more)
qt-win/6.10.2/mingw_64/metatypes/: qt6core_metatypes.json  qt6ffmpegmediapluginimplprivate_metatypes.json  qt6gui_metatypes.json  qt6multimediawidgets_metatypes.json  qt6network_metatypes.json  qt6printsupport_metatypes.json  qt6qml_metatypes.json  qt6qmllsprivate_metatypes.json  qt6quick_metatypes.json  qt6quickcontrols2_metatypes.json  qt6quickcontrols2materialstyleimpl_metatypes.json  qt6quickdialogs2quickimpl_metatypes.json  qt6widgets_metatypes.json
qt-win/6.10.2/mingw_64/mkspecs/: qconfig.pri  qmodule.pri
qt-win/6.10.2/mingw_64/modules/: Concurrent.json  Core.json  DBus.json  Designer.json  DesignerComponentsPrivate.json  DeviceDiscoverySupportPrivate.json  EntryPointPrivate.json  ExampleIconsPrivate.json  ExamplesAssetDownloaderPrivate.json  FFmpegMediaPluginImplPrivate.json  FbSupportPrivate.json  FreetypePrivate.json  Gui.json  HarfbuzzPrivate.json  Help.json  JpegPrivate.json  LabsAnimation.json  LabsFolderListModel.json  LabsPlatform.json  LabsQmlModels.json  LabsSettings.json  LabsSharedImage.json  LabsSynchronizer.json  LabsWavefrontMesh.json  Linguist.json  Multimedia.json  MultimediaQuickPrivate.json  MultimediaTestLibPrivate.json  MultimediaWidgets.json  Network.json  OpenGL.json  OpenGLWidgets.json  PacketProtocolPrivate.json  PngPrivate.json  PrintSupport.json  QDocCatchConversionsPrivate.json  QDocCatchGeneratorsPrivate.json  QDocCatchPrivate.json  Qml.json  QmlAssetDownloader.json  (+59 more)
qt-win/6.10.2/mingw_64/sbom/: qtbase-6.10.2.cdx.json  qtbase-6.10.2.spdx  qtbase-6.10.2.spdx.json  qtdeclarative-6.10.2.cdx.json  qtdeclarative-6.10.2.spdx  qtdeclarative-6.10.2.spdx.json  qtmultimedia-6.10.2.cdx.json  qtmultimedia-6.10.2.source.spdx  qtmultimedia-6.10.2.spdx  qtmultimedia-6.10.2.spdx.json  qtsvg-6.10.2.cdx.json  qtsvg-6.10.2.source.spdx  qtsvg-6.10.2.spdx  qtsvg-6.10.2.spdx.json  qttools-6.10.2.cdx.json  qttools-6.10.2.source.spdx  qttools-6.10.2.spdx  qttools-6.10.2.spdx.json  qttranslations-6.10.2.cdx.json  qttranslations-6.10.2.spdx  qttranslations-6.10.2.spdx.json
qt-win/6.10.2/mingw_64/translations/: designer_tr.qm  linguist_tr.qm
scripts/: afterPack.cjs
src/: App.vue  main.cpp  main.js  version.ts
src/assets/: main.css
src/components/: DesktopLyrics.vue  Layout.vue  MusicList.vue  PlayerBar.vue  Sidebar.vue  TitleBar.vue  UpdateNotification.vue
src/config/: apiConfig.js
src/core/: apiclient.cpp  apiclient.h  covercache.cpp  covercache.h  i18n.cpp  i18n.h  musicdownloader.cpp  musicdownloader.h  playerengine.cpp  playerengine.h  playlistdb.cpp  playlistdb.h  playlistmanager.cpp  playlistmanager.h  updatechecker.cpp  updatechecker.h  usermanager.cpp  usermanager.h
src/locales/: en-US.js  index.js  zh-CN.js
src/resources/: resources.qrc  style.qss
src/resources/windows/: app.rc.in
src/router/: index.js
src/theme/: theme.h
src/types/: global.d.ts
src/ui/: carousel.cpp  desktoplrc.cpp  desktoplrc.h  favoritespage.cpp  favoritespage.h  forgotpassworddialog.cpp  forgotpassworddialog.h  homepage.cpp  homepage.h  logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h  musiclistpage.cpp  musiclistpage.h  playerbar.cpp  playerbar.h  playerpage.cpp  playerpage.h  playlistcard.cpp  playlistcard.h  playlistlistitem.cpp  playlistlistitem.h  playlistpanel.cpp  playlistpanel.h  recentpage.cpp  recentpage.h  searchpage.cpp  searchpage.h  sidebar.cpp  sidebar.h  svgicon.h  titlebar.cpp  titlebar.h  toast.cpp  toast.h  updatedialog.cpp  updatedialog.h  uploadpage.cpp  uploadpage.h
src/views/: FavoritePlaylistsView.vue  FavoritesView.vue  HomeView.vue  LatestView.vue  PlayerView.vue  PlaylistDetailView.vue  PlaylistsView.vue  RankingView.vue  RecentPlayView.vue  SearchView.vue  SettingsView.vue
(+669 files in other folders)
